[gd_scene load_steps=12 format=2]

[ext_resource path="res://Source/Character/Laser/Laser.png" type="Texture" id=1]
[ext_resource path="res://Source/Character/Laser/Laser.gd" type="Script" id=2]
[ext_resource path="res://Source/Character/Laser/Weapons_Beam_Loop.wav" type="AudioStream" id=3]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
scale = 0.1

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.77037, 0.992593 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.588608, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 100.0
scale = 0.1

[sub_resource type="Environment" id=8]
background_mode = 4
glow_enabled = true
glow_intensity = 0.1
glow_blend_mode = 0
glow_hdr_luminance_cap = 2.0
glow_bicubic_upscale = true

[node name="Laser" type="RayCast2D"]
position = Vector2( 254.49, 331.789 )
enabled = true
cast_to = Vector2( 0, -1000 )
script = ExtResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, -100 )
default_color = Color( 0.5, 3, 6, 1 )

[node name="CastParticles2D" type="Particles2D" parent="."]
rotation = 1.5708
emitting = false
lifetime = 0.3
process_material = SubResource( 1 )
texture = ExtResource( 1 )

[node name="CollisionParticles2D" type="Particles2D" parent="."]
rotation = 1.5708
emitting = false
lifetime = 0.3
process_material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="BeamParticles2D" type="Particles2D" parent="."]
rotation = 1.5708
emitting = false
lifetime = 0.3
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
